# fluvio

./: .gitignore  .koshee-project  .kubecontext  Cargo.toml  devspace.yaml  justfile
.github/workflows/: build.yml
crates/cdk/: Cargo.toml
crates/cdk/src/: generate.rs
crates/fluvio-cli/: Cargo.toml
crates/fluvio-cli/src/client/: mod.rs  repair_index.rs
crates/fluvio-cli/src/client/topic/: clear.rs  mod.rs
crates/fluvio-cli/src/profile/sync/: k8.rs
crates/fluvio-cluster/: Cargo.toml
crates/fluvio-cluster/src/: delete.rs  error.rs  lib.rs
crates/fluvio-cluster/src/check/: mod.rs
crates/fluvio-cluster/src/cli/start/: k8.rs
crates/fluvio-cluster/src/runtime/local/: spu.rs
crates/fluvio-cluster/src/start/: common.rs  k8.rs  local.rs
crates/fluvio-controlplane-metadata/src/spg/: status.rs
crates/fluvio-controlplane-metadata/src/spu/: spec.rs
crates/fluvio-generate/: Cargo.toml
crates/fluvio-generate/src/: lib.rs
crates/fluvio-namespace-gc/: Cargo.toml
crates/fluvio-namespace-gc/src/: main.rs
crates/fluvio-sc/: Cargo.toml
crates/fluvio-sc-schema/src/: apis.rs  request.rs
crates/fluvio-sc-schema/src/objects/: clear.rs  mod.rs
crates/fluvio-sc/src/: lib.rs  otel.rs  start.rs
crates/fluvio-sc/src/k8/: mod.rs
crates/fluvio-sc/src/k8/controllers/: ingress.rs  mod.rs  spg_statefulset_v2.rs  spu_controller.rs  spu_controller_v2.rs  spu_service.rs  spu_service_v2.rs
crates/fluvio-sc/src/k8/objects/: mod.rs  spg_group.rs  spu_k8_config.rs
crates/fluvio-sc/src/services/public_api/: api_version.rs  clear.rs  mod.rs  public_server.rs
crates/fluvio-sc/tests/: k8_integration.rs
crates/fluvio-socket/: Cargo.toml
crates/fluvio-spu/: Cargo.toml
crates/fluvio-spu/src/: health.rs  lib.rs  otel.rs  otel_metrics.rs  start.rs
crates/fluvio-spu/src/config/: spu_config.rs
crates/fluvio-spu/src/control_plane/: dispatcher.rs
crates/fluvio-spu/src/core/: global_context.rs  metrics.rs
crates/fluvio-spu/src/replication/leader/: replica_state.rs
crates/fluvio-spu/src/services/public/: produce_handler.rs  stream_fetch.rs
crates/fluvio-storage/src/: lib.rs  repair.rs  replica.rs  segment.rs  segments.rs
crates/fluvio-stream-dispatcher/: Cargo.toml
crates/fluvio-stream-dispatcher/src/: lib.rs
crates/fluvio-stream-dispatcher/src/dispatcher/: mod.rs
crates/fluvio-stream-dispatcher/src/metadata/: kube_rs.rs  local.rs  memory_client.rs  mod.rs
crates/fluvio-stream-dispatcher/src/store/: mod.rs
crates/fluvio-stream-dispatcher/tests/: kube_client_integration.rs
crates/fluvio-stream-model/: Cargo.toml
crates/fluvio-stream-model/src/: lib.rs
crates/fluvio-stream-model/src/k8_types/: int_or_string.rs  metadata.rs  mod.rs  options.rs  store.rs
crates/fluvio-stream-model/src/k8_types/app/: deployment.rs  stateful.rs
crates/fluvio-stream-model/src/k8_types/core/: config_map.rs  namespace.rs  node.rs  plugin.rs  pod.rs  secret.rs  service.rs  service_account.rs
crates/fluvio-stream-model/src/store/: k8.rs
crates/fluvio-test-util/setup/environment/: k8.rs
crates/fluvio-types/src/: defaults.rs
crates/fluvio/src/: admin.rs  fluvio.rs  spu.rs
crates/fluvio/src/config/: cluster.rs
crates/fluvio/src/consumer/: mod.rs  retry.rs
crates/fluvio/src/producer/: partition_producer.rs
crates/fluvio/test-data/profiles/: updatable_config.toml
crates/smartmodule-development-kit/: Cargo.toml
crates/smartmodule-development-kit/src/: generate.rs
k3d/: cluster.yaml
k8-util/docker/: Dockerfile  Dockerfile.fluvio-run  Dockerfile.namespace-gc
k8-util/helm/: argocd-application.yaml
k8-util/helm/fluvio-app/: Chart.yaml  values.yaml
k8-util/helm/fluvio-app/templates/: _helpers.tpl  fluvio-connector-config.yaml  namespace-gc-deployment.yaml  role-binding.yaml  role.yaml  sc-deployment.yaml  sc-internal.yaml  sc-public.yaml  service.yaml  spu-k8-config.yaml  spugroup.yaml
k8-util/helm/fluvio-sys/: Chart.yaml
skupper/: listeners.yaml  site.yaml
tests/e2e/: kube_rs_e2e.bats
