[package]
name = "fluvio-namespace-gc"
description = "Garbage-collect Fluvio topics when their source namespace is deleted"
version = "0.1.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "fluvio-namespace-gc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "env"] }
futures-util = { workspace = true }
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
k8s-openapi = { workspace = true }
schemars = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
