[package]
name = "fluvio-stream-dispatcher"
description = "Fluvio Event Stream access"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fluvio_stream_dispatcher"
path = "src/lib.rs"

[features]
local = ["fluvio-stream-model/use_serde", "fluvio-stream-model/k8", "serde_yaml", "parking_lot"]
kube = ["fluvio-stream-model/k8", "dep:kube", "dep:k8s-openapi", "serde_json"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-lock = { workspace = true }
async-channel = { workspace = true }
cfg-if = { workspace = true }
futures-util = { workspace = true, features = ["alloc"] }
once_cell = { workspace = true }
serde = { workspace = true,  features = ['derive'] }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
parking_lot = { workspace = true, features = ["send_guard"], optional = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tempfile = { workspace = true }

# Fluvio dependencies
fluvio-types = { workspace = true }
fluvio-stream-model = { workspace = true }
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
fluvio-future = { workspace = true, features = ["task", "timer"] }

[dev-dependencies]
fluvio-future = { workspace = true, features = ["fixture"] }
fluvio-stream-model = { workspace = true, features = ["fixture"]  }
fluvio-controlplane-metadata = { workspace = true, features = ["k8"] }
uuid = { version = "1", features = ["v4"] }
