[package]
name = "fluvio-stream-model"
description = "Fluvio Event Stream Model"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fluvio_stream_model"
path = "src/lib.rs"

[features]
use_serde = ["serde"]
k8 = ["use_serde", "serde_json"]
fixture = ["serde"]
fixtures = []

[dependencies]
async-lock = { workspace = true }
event-listener = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ['derive', 'std'], optional = true }
tracing = { workspace = true }

# Fluvio dependencies
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
fluvio-future = { workspace = true, features = ["fixture"] }
